[package]
name = "rpgmasd"
version = "3.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["cargo", "derive"] }
clap_derive = "4.5.49"
asset-decrypter = { package = "rpgm-asset-decrypter-lib", version = "3.1.0" }
anyhow = "1.0.100"
serde_json = "1.0.148"
strum_macros = "0.27.2"
